# rss-checker

./: Cargo.toml
src/: main.rs  rss.rs  rss_service.rs  templater.rs
website/: index.html
